--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "crypto": "^1.0.1",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-dev-server": "^3.8.1"
   },
   "devDependencies": {
-    "ts-loader": "^6.1.2",
     "css-loader": "^3.2.0",
-    "webpack-cli": "^3.3.9"
+    "ts-loader": "^6.1.2",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --port=8081"
